# BaseTensorRT

./: .gitattributes  .gitignore  README.md
1.1-CUcontext/: CMakeLists.txt  main.cpp
1.2-check1/: CMakeLists.txt  main.cpp  readme.md
1.21-multi-camera-decoder/: link-cuvid.sh
1.21-multi-camera-decoder/objs/application/: app_demuxer.cpp.mk
1.21-multi-camera-decoder/objs/ffhdd/: color.cu.mk  ffmpeg-demuxer.cpp.mk  simple-logger.cpp.mk
1.21-multi-camera-decoder/src/: interface.cpp
1.21-multi-camera-decoder/src/application/: app_multi_camera.cpp
1.21-multi-camera-decoder/src/ffhdd/: cuvid-decoder.cpp  multi-camera.cpp
1.21-multi-camera-decoder/workspace/: test.py
1.3-memory-alloc/: CMakeLists.txt  main.cpp
2.1-hello-runtime/: CMakeLists.txt  main.cpp  readme.md
2.2-memory/: CMakeLists.txt  main.cpp
2.3-stream/: CMakeLists.txt  main.cpp  readme.md
2.4-kernel-func/: CMakeLists.txt  main.cpp  readme.md
2.4-kernel-func/cudaFunc/: CMakeLists.txt  kerFunc.cu  kerFunc.cuh
2.5-shared-memory1/: main.cpp  readme.md
2.5-shared-memory1/cudaFunc/: CMakeLists.txt  sharedMemory.cuh  sharedMenory.cu
2.6-vector-add/: CMakeLists.txt  main.cpp
2.6-vector-add/cudaFunc/: vectorAdd.cu  vectorAdd.cuh
2.7-shared-memory2/: CMakeLists.txt  main.cpp  readme.md
2.7-shared-memory2/cudaFunc/: CMakeLists.txt  shareMemort.cu  shareMemory.cuh
2.8-warpaffine/: CMakeLists.txt  main.cpp  readme.md
2.8-warpaffine/cudaFunc/: CMakeLists.txt  warpaffine.cu  warpaffine.cuh
3.1-hello-tensorrt/: CMakeLists.txt  main.cpp  readme.md
3.2-cnn-dynamic-shape/: CMakeLists.txt  conv-test.py  main.cpp  readme.md
3.3-onnx-editor/: edit-onnx.py  read-onnx.py  torch-gen-onnx.py
3.4-onnx-parser/: CMakeLists.txt  gen-onnx.py  main.cpp
3.4-onnx-parser/TrtFunc/: CMakeLists.txt  onnxParser.cpp  onnxParser.h
3.5-full-cnn-classifier/: CMakeLists.txt  gen-onnx.py  main.cpp
3.5-full-cnn-classifier/TrtFunc/: CMakeLists.txt  cnnClassifier.cpp  cnnClassifier.h
4.1-yolov5-detect/: CMakeLists.txt  detect-yolov5-6.0-change.sh  export-yolov5-6.0-change.sh  export-yolov5-6.0.sh  main.cpp  readme.md
4.1-yolov5-detect/src/: CMakeLists.txt  yolo.cpp  yolo.h
4.1-yolov5-detect/yolov5/: download-yolov5.sh
4.1-yolov5-detect/yolov5-change/: train.py
4.1-yolov5-detect/yolov5-change/data/: mydata.yaml
4.1-yolov5-detect/yolov5-change/data/hyps/: hyp.scratch.yaml
4.1-yolov5-detect/yolov5-change/models/: yolov5s.yaml
4.1-yolov5-detect/yolov5-change/runs/train/exp/: events.out.tfevents.1676341937.ThinkStation.25534.0  opt.yaml  results.csv
4.1-yolov5-detect/yolov5-change/runs/train/exp10/: events.out.tfevents.1676352249.ThinkStation.24894.0  opt.yaml
4.1-yolov5-detect/yolov5-change/runs/train/exp2/: events.out.tfevents.1676344515.ThinkStation.2031.0  opt.yaml  results.csv
4.1-yolov5-detect/yolov5-change/runs/train/exp3/: events.out.tfevents.1676349448.ThinkStation.12779.0  opt.yaml
4.1-yolov5-detect/yolov5-change/runs/train/exp4/: events.out.tfevents.1676349669.ThinkStation.12978.0  opt.yaml
4.1-yolov5-detect/yolov5-change/runs/train/exp5/: events.out.tfevents.1676350433.ThinkStation.13161.0  opt.yaml
4.1-yolov5-detect/yolov5-change/runs/train/exp6/: events.out.tfevents.1676351550.ThinkStation.23977.0  opt.yaml
4.1-yolov5-detect/yolov5-change/runs/train/exp7/: events.out.tfevents.1676351678.ThinkStation.24156.0  opt.yaml
4.1-yolov5-detect/yolov5-change/runs/train/exp8/: opt.yaml  (+1 more)
4.2-yolox-detect/: CMakeLists.txt  main.cpp
4.2-yolox-detect/YOLOX/tools/: export_onnx.py
4.2-yolox-detect/YOLOX/yolox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
4.2-yolox-detect/YOLOX/yolox/models/: yolo_head.py
4.2-yolox-detect/src/: yolox.cpp  yolox.h
4.3-unet-seg/: CMakeLists.txt  main.cpp  readme.md
4.3-unet-seg/src/: CMakeLists.txt  unet.cpp  unet.h
4.3-unet-seg/unet/: export.py  predict.py  unet.py
4.4-mmdetection-yolox/: main.cpp
4.4-mmdetection-yolox/mmdetection/: export_onnx.py
4.4-mmdetection-yolox/mmdetection/mmdet/: __init__.py
4.4-mmdetection-yolox/src/: CMakeLists.txt  yolox.cpp  yolox.h
4.5-multithread/: CMakeLists.txt  infer.cpp  infer.hpp  main.cpp  readme.md
4.6-MyTrtLib/: CMakeLists.txt  gen-onnx.py  main.cpp  readme.md
4.6-MyTrtLib/src/Tensor/: CMakeLists.txt  Trt_Tensor.cpp  Trt_Tensor.hpp
4.6-MyTrtLib/src/builder/: CMakeLists.txt  trt_builder.cpp  trt_builder.hpp
4.6-MyTrtLib/src/infer/: CMakeLists.txt  Trt_Infer.cpp
4.6-MyTrtLib/src/memory/: CMakeLists.txt  mix_memory.cpp  mix_memory.hpp
4.6-MyTrtLib/src/utils/: CMakeLists.txt  simple_logger.cpp
4.7-multithread-yolov5/: CMakeLists.txt  main.cpp
4.7-multithread-yolov5/src/TensorRT/Tensor/: CMakeLists.txt
4.7-multithread-yolov5/src/TensorRT/builder/: CMakeLists.txt
4.7-multithread-yolov5/src/TensorRT/infer/: CMakeLists.txt  Trt_Infer.hpp
4.7-multithread-yolov5/src/TensorRT/memory/: CMakeLists.txt
4.7-multithread-yolov5/src/TensorRT/utils/: cuda_tools.cu  cuda_tools.cuh  simple_logger.hpp
4.7-multithread-yolov5/src/app_yolo/: CMakeLists.txt  yolov5.cpp  yolov5.hpp
4.8-TrtSever/: CMakeLists.txt  main.cpp
4.8-TrtSever/src/TrtLib/common/: ilogger.cpp  ilogger.hpp  json.cpp
4.8-TrtSever/src/app_http/: http_server.hpp
4.8-TrtSever/web/: package-lock.json
4.8-TrtSever/web/src/tools/: tips.js  tools.js
4.8-TrtSever/workspace/log/: 2022-10-14.txt  2022-10-15.txt
4.9-multi-carmera/: CMakeLists.txt  main.cpp  test  test.cpp
4.9-multi-carmera/src/TrtLib/common/: cuda_tools.cuh
4.9-multi-carmera/src/app_yolo/: yolo_decode.cu
4.9-multi-carmera/src/ffhd/: CMakeLists.txt  XAudioRecord.cpp  XDataThread.h  XMediaEncode.cpp  XRtmp.cpp  XVideoCapture.cpp  XVideoCapture.h  main.h
4.9-multi-carmera/src/ffhdd/: CMakeLists.txt  color.cu  cuvid-decoder.cpp  cuvid-decoder.hpp  ffmpeg-demuxer.cpp  ffmpeg-demuxer.hpp  multi-camera.cpp  multi-camera.hpp  nalu.hpp
4.9-multi-carmera/test/: test_ffhd.cpp
4.9-multi-carmera/web/: README.md  install.sh
4.9-multi-carmera/web/src/: App.vue
4.9-multi-carmera/workspace/log/: 2022-12-12.txt  2023-02-18.txt  2023-02-23.txt
(+3 files in other folders)
